Fixed a few typos.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jlru",
-  "version": "0.0.2",
-  "description": "An in-memory key/value database based on the Least Recently Used algorithm",
+  "version": "0.0.3",
+  "description": "An in-memory key/value cache based on the Least Recently Used algorithm",
   "main": "_dist/jlru.min.js",
   "bin": {},
   "scripts": {
